<resources>
    <string name="app_name">LoginFirebase</string>
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_field">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">already registerd? Log me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions</string>
    <string name="signup">Signup</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="new_user_register_here">New user? Register here!</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="uname">username</string>
    <string name="already_a_user_log_in_here">Already a user? Log in here!</string>
    <string name="pass">Password</string>
    <string name="email">Email</string>
    <string name="mail">Email</string>
    <string name="name">name</string>
</resources>


